# sportsona

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 63c9fcc4a4df_add_f1_schema_with_historical_data_.py  a1b2c3d4e5f6_add_user_auth_flags.py  a7b8c9d0e1f2_add_fk_indexes.py  b2c3d4e5f6a7_add_auth_token_tables.py  bdbbf60ac957_initial_tables.py  c3d4e5f6a7b8_add_stats_of_day.py  d4e5f6a7b8c9_add_race_recaps.py  e5f6a7b8c9d0_add_ask_cache.py  f6a7b8c9d0e1_add_ask_answers.py
backend/app/: main.py
backend/app/auth/: __init__.py  dependencies.py  rate_limit.py  schemas.py  security.py  tokens.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  ask_answer.py  ask_cache.py  auth.py  f1.py  recap.py  stat_of_day.py  user.py
backend/app/models/f1/: __init__.py  base.py  circuit.py  constructor.py  driver.py  race.py  season.py  standings.py
backend/app/routers/: ask.py  auth.py  recap.py  stat_of_day.py  users.py
backend/app/schemas/: ask.py  auth.py  errors.py  recap.py  stat_of_day.py  users.py
backend/app/services/: __init__.py  email.py  f1_data_service.py  sql_safety.py
backend/scripts/: cleanup_data_dupes.sql  retry_missing_results.py  scheduled_sync.py  sync_f1_data.py  try_recap.py
backend/tests/: _seed.py  conftest.py  test_harness_smoke.py
backend/tests/auth/: test_dependencies.py  test_email_verification.py  test_logout_and_revocation.py  test_password_reset.py  test_rate_limit.py  test_refresh.py  test_routes.py  test_security.py
backend/tests/routers/: test_circuits.py  test_constructors.py  test_drivers.py  test_races.py  test_root.py  test_seasons.py  test_users.py
backend/tests/services/: test_email.py
web/: README.md  (+5 more)
(+75 files in other folders)
